# trtle

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cartridge.c  cartridge.h  dma.c  dma.h  gameboy.c  gameboy.h  interrupt_controller.c  interrupt_controller.h  joypad.c  joypad.h  libretro.c  libretro.h  logger.h  ppu.c  ppu.h  processor.c  processor.h  serial.c  serial.h  sound_controller.c  sound_controller.h  timer.c  timer.h
.github/workflows/: main.yml
include/trtle/: cartridge.h  gameboy.h  logger.h  logging.h  trtle.h
src/: CMakeLists.txt  logger.c  logger.h  pch.h
src/core/: CMakeLists.txt  cartridge.c  cartridge.h  dma.c  dma.h  gameboy.c  gameboy.h  interrupt_controller.c  interrupt_controller.h  joypad.c  joypad.h  ppu.c  ppu.h  processor.c  processor.h  serial.c  serial.h  sound_controller.c  sound_controller.h  timer.c  timer.h
